Closed
Bug 46152
Opened 25 years ago
Closed 25 years ago
Autocompletion stopped working
Categories
(MailNews Core :: Composition, defect, P1)
MailNews Core
Composition
Tracking
(Not tracked)
VERIFIED
FIXED
M17
People
(Reporter: akkzilla, Assigned: kinmoz)
References
Details
(Keywords: regression, Whiteboard: [nsbeta2+])
Attachments
(1 file)
|
722 bytes,
patch
|
Details | Diff | Splinter Review |
I still have the autocomplete pref on (or so the pref window tells me), but when
I pause while typing a partial address from my address book, or hit tab after
typing a partial address, it no longer autocompletes. It worked a few days ago,
but doesn't work in the 7/21 build.
| Reporter | ||
Updated•25 years ago
|
Keywords: regression
Comment 1•25 years ago
|
||
Accepting and nominating to nsbeta2
Comment 3•25 years ago
|
||
nominating for dogfood also. Makes the product very hard to use.
Keywords: dogfood
Comment 4•25 years ago
|
||
Append also on Windows
fyi: if you press _Enter_ after typing partial address, the autocomplete pop-up
menu comes up.
Comment 6•25 years ago
|
||
Putting on [nsbeta2-] radar. Not critical to beta2. Adding "nsbeta3" keyword
for consideration of a fix for that milestone.
Keywords: nsbeta3
Whiteboard: [nsbeta2-]
pdt - please reconsider. Autocomplete is one of the features marketing is
promoting and has been working all along, but just regressed. We also need the
exposure from customers to test this feature.
Whiteboard: [nsbeta2-]
Comment 8•25 years ago
|
||
This affects Message compose as well the Browser URL edit field.
For some reason, autocomplete XBL don't receive anymore onInput events.
Comment 9•25 years ago
|
||
This regression has been introduced between build 2000072008 and build
2000072020. Still looking...
Comment 10•25 years ago
|
||
I really believe that this is critical to beta2. This is one of our key features
and since I marked it dogfood, I also believe it is crucial for the usability of
the product.
Comment 11•25 years ago
|
||
Please reconsider the nsbeta2 nomination.
This feature is really important for beta 2. We did not have our auto-complete
functionality in beta 1, so this is our first chance to get feedback on the
feature. Auto-complete and email address collection work hand-in-hand, and the
auto-complete functionality works differently in Seamonkey than in the prior
version of Messenger. We really need to get beta feedback on the implementation
to make sure that users can work with the new auto-complete.
To top it off, autocomplete was working on Friday. This is a very recent
regression.
Comment 12•25 years ago
|
||
jpatel: What criteria was used to determine this was not critical for beta2?
Perhaps we need to reexamine that. Major features with sudden regressions are
very important for any milestone and more so for public releases.
Comment 13•25 years ago
|
||
Backing up Rods' changes in nsGfxTextControlFrame2.cpp &
nsGfxTextControlFrame2.h from last Thursday fix the problem. Reassign to rods
Assignee: ducarroz → rods
Status: ASSIGNED → NEW
Comment 14•25 years ago
|
||
This regression also broke the live display of the display name when editing an
addressbook card and also IRC
Comment 15•25 years ago
|
||
Ducarroz, The display name problem is addressed in bug 43838. And maybe
introduced by this bug.
Comment 16•25 years ago
|
||
BTW, Rods' checkin was for bug 45846.
Comment 17•25 years ago
|
||
I can confirme that backing up Rods' changes fix bug 43838 as well.
Blocks: 43838
Comment 18•25 years ago
|
||
I'm sure when the PDT review team marked this as a minus, they were just
confused about the severity of the bug.
I'll email them right now so we can get the plus put back on this.
Priority: P3 → P1
Comment 19•25 years ago
|
||
I don't think there was any confusion, just an application of the 'would you
pull it off the wire?' criterion based on the info we had. We found that
auto-completion still worked on <return>, but not when you pause. One thing
that wasn't clear in the triage meeting is that it doesn't work at all on other
blurs - such as tab or clicking outside the field. For that reason, I agree
this should be plus, and will stick my neck out to mark it so.
Whiteboard: [nsbeta2+]
| Assignee | ||
Comment 20•25 years ago
|
||
Apparently Reflow() is not called for objects wrapped with a box, so we need to
find some other hook where we can reset our onInput flag. Reflow() is called for
HTML form widgets.
I'm attatching a patch that temporarily fixes the problem until I can find a
better hook.
| Assignee | ||
Comment 21•25 years ago
|
||
Comment 22•25 years ago
|
||
I've verified, the path fix all problems. Thanks kin.
Comment 24•25 years ago
|
||
I've checked in the fix for Kin.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 25•25 years ago
|
||
OK using 2000-07-25-08 commercial build linux rh6.0.
Comment 26•25 years ago
|
||
OK using 2000-07-25-08 commercial build NT 4.0
OK using 2000-07-25-11 commercial build mac OS 9.0
Autocompletion is generally working in the july25th commercial build, any
specific issues will be logged separately.
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•