Fix for bug 46152. Checkin fix for kin. Partially backup Rods' last change because the reflow function won't be called when the text control is nested into a box (textfield). R=ducarroz